Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/DEL_EmailAlertConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is used to manage the Merge Fields and Email Template used for email notification when Case Comments are created.</description>
    <label>Email Alert Configuration</label>
</CustomObject>