Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/CaseCommentEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentEmailTemplate__c</fullName>
    <description>Developer name of the email template used to send email when a Case Comment is created.</description>
    <inlineHelpText>Enter the Developer Name of the Email Template to be used to send email when case comment is created.</inlineHelpText>
    <label>Case Comments Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>