Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/CaseCommentFields__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentFields__c</fullName>
    <description>Comma-separated list of values of all the DEL_CaseComment__c fields that should be included in the SOQL query.</description>
    <inlineHelpText>Enter the API names of fields to be included in the DEL_CaseComment__c query.</inlineHelpText>
    <label>Case Comment Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>