Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/CaseCommentsEmailTemplateSpanish__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentsEmailTemplateSpanish__c</fullName>
    <description>Email template name to be used when language is Spanish</description>
    <inlineHelpText>Enter the email template to be used for Spanish language.</inlineHelpText>
    <label>Case Comments Email Template - Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>