Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/CCAddressSwitch__c.field-meta.xml
<CustomField>
    <fullName>CCAddressSwitch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox determines whether email notifications should be sent to the people added in CC while replying to Case Comment email notification.</description>
    <label>CC Address Switch</label>
    <type>Checkbox</type>
</CustomField>