Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/EmailReplyBreakPattern__c.field-meta.xml
<CustomField>
    <fullName>EmailReplyBreakPattern__c</fullName>
    <description>DEL- This field is used to store the email pattern used to break latest replies from the email thread.</description>
    <label>Email Reply Break Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>