Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/MergeFields__c.field-meta.xml
<CustomField>
    <fullName>MergeFields__c</fullName>
    <description>Comma-separated list of values of all merge fields that are included in the email template.</description>
    <inlineHelpText>Enter the merge fields used in the email template.</inlineHelpText>
    <label>Merge Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>