Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/OrgWideAddress__c.field-meta.xml
<CustomField>
    <fullName>OrgWideAddress__c</fullName>
    <description>Emails sent when case comments are entered will be from this email.</description>
    <inlineHelpText>Emails sent when case comments are entered will be from this email.</inlineHelpText>
    <label>Org Wide Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>