Delmar/force-app/main/default/objects/DEL_EmailAlertConfiguration__c/fields/VisibleToCustomerSwitch__c.field-meta.xml
<CustomField>
    <fullName>VisibleToCustomerSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to control the visibility of the Visible to Customer checkbox on the Case Comments page.</description>
    <label>Visible To Customer Switch</label>
    <type>Checkbox</type>
</CustomField>